terraform/aws-ec2-vpc/aws-ec2-v1.tf
# # Terraform Settings Block
# terraform {
#   required_providers {
#     aws = {
#       source  = "hashicorp/aws"
#       #version = "~> 3.21" # Optional but recommended in production
#     }
#   }
# }

# # Provider Block
# provider "aws" {
#   profile = "default" # AWS Credentials Profile configured on your local desktop terminal  $HOME/.aws/credentials
#   region  = "us-east-1"
# }

# # Resource Block
# resource "aws_instance" "ec2demo" {
#   ami           = "ami-026ebd4cfe2c043b2" # Amazon Linux in us-east-1, update as per your region
#   instance_type = "t2.micro"
#   key_name = "aman"
# }
